<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/headerlogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bglogin"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            android:contentDescription="@string/img_daws"
            android:src="@drawable/daws"
            app:tint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sectionwelcom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerlogin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/message"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sectionwelcom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/icon_person"
                android:src="@drawable/ic_person" />

            <EditText
                android:id="@+id/input_user"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/noempleado"
                android:inputType="numberSigned"
                android:textColor="@color/black"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />

        <!--        <Button-->
        <!--            android:id="@+id/btn_login"-->
        <!--            android:layout_width="250dp"-->
        <!--            android:layout_height="48dp"-->
        <!--            android:layout_marginTop="20dp"-->
        <!--            android:background="@drawable/btn_primary"-->
        <!--            android:text="@string/login"-->
        <!--            android:textAllCaps="true"-->
        <!--            android:textColor="@color/white"-->
        <!--            android:textStyle="bold" />-->
        <include
            android:id="@+id/activity_login_button"
            layout="@layout/button_loading_layout"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp" />
    </LinearLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/lblcp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>